Mar 13th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Fix a bug where snmpttconvertmib does not handle ARGUMENTS lines
  that have $1, $2 etc instead of %0, %1.  Thanks to Todd A. Green.
  Bug 1438394.

Mar 12th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Move all SQL update code to subroutines (mysql_update etc).
- Added logging of trap statistics to SQL table.  Added *table_statistics
  snmptt.ini variable to define the table to be used.
- Added ability to add custom columns to *_table and *_table_unknown
  tables.  Added sql_custom_columns and sql_custom_columns_unknown
  snmptt.ini options.
- Added variable substitution $H.  This variable will default to the 
  host name of the computer that is running SNMPTT, unless the 
  snmptt_system_name snmptt.ini option is defined.
- Sys::Hostname is now required.

Mar 4th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Fix a bug where snmpttconvertmib would not translate a TRAP-TYPE / 
  NOTIFICATION-TYPE line if it was split across two lines.  Thanks
  to Todd A. Green.  Bug 1438794.

Jan 20th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.2beta
- Fix bug in process trap for $match_temp 'remove any white space from before 
  and after i modifier'
- Added 'use strict' to snmptt
- Added 'use strict' to snmpttconvertmib
- Added 'use strict' to snmpttconvert
- Added 'use strict' to snmptthandler and improved debugging

Jan 17th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.1

Dec 31st, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Clean up white space formatting of code.

Dec 10th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Update version stamp in all files
- Changed 'sub match' to only do variable substitution if needed.

Nov 22nd, 2005: Alex Burger <alex_b@users.sourceforge.net>
- MATCH statement now accepts any variable name instead of only
  enterprise variables.  Example: MATCH $s:(Normal)
